# Graphic

./: .gitignore  README.md
App/: CMakeLists.txt
App/shaders/: main.frag  main.vert  water.frag  water.vert
App/src/: glad.c  main.c  main.cpp
Demos/Circle/: circle.c  circle.h  main.c
Demos/Cuboid/: cube.c
Demos/Line/: line.h  main.c
Demos/Matrix/: main.c  matrix.c  matrix.h
Demos/Pong/include/: ball.h  game.h  pong.h
Demos/Pong/src/: ball.c  game.c  pong.c
